--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,66 @@
 body {
+	min-width: 900px;
+	margin: 0;
+	padding: 0;
 	font-family: "Roboto", "Arial", "sans-serif";
-	min-width: 1200px;
+	font-style: normal;
+	font-size: 16px;
+	line-height: 22px;
+	color: #000;
+	background-color: #fff;
+}
+h1 {
+	margin: 0;
+	font-family: "Roboto", "Arial", "sans-serif";
+	font-style: normal;
+	font-size: 30px;
+	line-height: 1.4;
+	color: #000;
+}
+h2 {
+	margin: 0;
+	font-family: "Roboto", "Arial", "sans-serif";
+	font-style: normal;
+	font-size: 22px;
+	line-height: 1.4;
+	color: #000;
 }
 .clearfix:after {
 	content: "";
 	display: table;
 	clear: both;
 }
-.main-header {
-	padding: 5px 0;
-}
 .container {
-	width: 890px;
+	width: 880px;
+	min-height: 20px;
 	margin:0 auto;
-	/*для оформления схемы*/
-	min-height: 60px;
-	padding: 0 5px ;
+	padding-left: 10px;
+	padding-right: 10px;
 	outline: 1px solid green;
 }
-.main-logo {
-	margin:0;
-	margin-top:20px;
-	float:left;
-	width: 150px;
-	outline: 1px solid black;
+.main-header {
+	margin-top: 10px;
+	margin-bottom: 80px;
 }
-.main-navigation {
-	float: right;
-	width: 560px;
+.main-header__top-wrapper {
+	position: relative;
+	margin-bottom: 10px;
 }
-.main-navigation li {
+.main__logo {
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: block;
+}
+.main__nav {
+
+}
+.main-nav__list {
+	list-style: none;
+	font-size: 0;
+}
+.main-nav__list-item {
 	display: inline-block;
-}
-.main-cart {
-	float: right;
-	width: 160px;
-	outline: 1px solid red;
-}
-.main-slider {
-	height: 352px;
-	clear: both;
-	outline: 1px solid red;
+	vertical-align: top;
+	font-size: 18px;
 }
