--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,464 @@
+@charset "UTF-8";
+
+ @font-face {
+  font-family: "symbols-nerds";
+  src: url("../font/symbols-nerds.eot?27841936");
+  src: url("../font/symbols-nerds.eot?27841936#iefix") format("embedded-opentype"),
+       url("../font/symbols-nerds.woff?27841936") format("woff"),
+       url("../font/symbols-nerds.ttf?27841936") format("truetype"),
+       url("../font/symbols-nerds.svg?27841936#symbols-nerds") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: "symbols-nerds";
+    src: url("../font/symbols-nerds.svg?27841936#symbols-nerds") format("svg");
+  }
+}
+*/
+
+ [class^="icon-"]::before, [class*=" icon-"]::before {
+  font-family: "symbols-nerds";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+.icon-basket::before { content: "\62"; } /* "b" */
+.icon-facebook::before { content: "\66"; } /* "f" */
+.icon-twitter::before { content: "\74"; } /* "t" */
+.icon-vk::before { content: "\76"; } /* "v" */
+.icon-up-dir::before { content: "\25b2"; } /* "▲" */
+.icon-down-dir::before { content: "\25bc"; } /* "▼" */
+.icon-circle::before { content: "\25cb"; } /* "○" */
+.icon-circle-dot::before { content: "\25cf"; } /* "●" */
+.icon-check-off::before { content: "\2610"; } /* "☐" */
+.icon-check-on::before { content: "\2611"; } /* "☑" */
+.icon-instagramm::before { content: "📷"; } /* "\1f4f7" */
+
+
+
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
 body {
-	min-width: 900px;
-	margin: 0;
-	padding: 0;
-	font-family: "Roboto", "Arial", "sans-serif";
-	font-style: normal;
-	font-size: 16px;
-	line-height: 22px;
-	color: #000;
-	background-color: #fff;
+  min-width: 900px;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", "Arial", "sans-serif";
+  font-size: 16px;
+  font-style: normal;
+  line-height: 22px;
+  color: #000;
+  background-color: #fff;
 }
 h1 {
-	margin: 0;
-	font-family: "Roboto", "Arial", "sans-serif";
-	font-style: normal;
-	font-size: 30px;
-	line-height: 1.4;
-	color: #000;
+  margin: 0;
+  font-family: "Roboto", "Arial", "sans-serif";
+  font-size: 30px;
+  font-style: normal;
+  line-height: 1.4;
+  color: #000;
 }
 h2 {
-	margin: 0;
-	font-family: "Roboto", "Arial", "sans-serif";
-	font-style: normal;
-	font-size: 22px;
-	line-height: 1.4;
-	color: #000;
+  margin: 0;
+  font-family: "Roboto", "Arial", "sans-serif";
+  font-size: 22px;
+  font-style: normal;
+  line-height: 1.4;
+  color: #000;
 }
 .clearfix:after {
-	content: "";
-	display: table;
-	clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 .container {
-	width: 880px;
-	min-height: 20px;
-	margin:0 auto;
-	padding-left: 10px;
-	padding-right: 10px;
-	outline: 1px solid green;
+  position: relative;
+  width: 900px;
+  min-height: 20px;
+  margin: 0 auto;
+  padding-right: 10px;
+  padding-left: 10px;
+  /*outline: 1px solid green;*/
 }
 .main-header {
-	margin-top: 10px;
-	margin-bottom: 80px;
+  min-height: 328px;
+  margin-bottom: 80px;
+  padding-top: 28px;
+  background-color: #eee;
 }
 .main-header__top-wrapper {
-	position: relative;
-	margin-bottom: 10px;
+  position: relative;
+  margin-bottom: 36px;
 }
-.main__logo {
-	position: absolute;
-	top: 0;
-	left: 0;
-	display: block;
+.main-header__logo {
+  float: left;
 }
-.main__nav {
-
+.main-nav {
+  float: right;
+  margin-top: 25px;
 }
 .main-nav__list {
-	list-style: none;
-	font-size: 0;
+  list-style: none;
+  font-size: 0;
 }
 .main-nav__list-item {
-	display: inline-block;
-	vertical-align: top;
-	font-size: 18px;
+  display: inline-block;
+  margin-right: 44px;
+  font-size: 14px;
+  line-height: 30px;
+  vertical-align: top;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.main-nav__list-item a {
+  color: #000;
+  text-decoration: none;
+}
+.main-nav__list-item:last-child {
+  margin-right: 0;
+}
+.main-header__cart {
+  position: relative;
+  float: right;
+  width: 160px;
+  margin-top: 25px;
+  text-align: right;
+  font-size: 14px;
+  line-height: 30px;
+  vertical-align: top;
+  text-transform: uppercase;
+}
+.main-header__cart::before {
+  content: "\62";
+  position: absolute;
+  top: 50%;
+  left: 30px;
+}
+.main-header__cart a {
+  color: #000;
+  text-decoration: none;
+}
+.slider {
+  position: relative;
+  min-height: 310px;
+}
+.slider input[type="radio"] {
+  display: none;
+}
+.slider__slide:not(:first-child) {
+  display: none;
+}
+.slider__controls {
+  position: absolute;
+  bottom: 94px;
+  left: 50%;
+  font-size: 0;
+  transform: translateX(-50%);
+}
+
+.slider__toggle {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  margin-right: 9px;
+  border: 3px solid #fff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+#toggle-1:checked ~ .slider__controls label[for="toggle-1"],
+#toggle-2:checked ~ .slider__controls label[for="toggle-2"],
+#toggle-3:checked ~ .slider__controls label[for="toggle-3"] {
+  background-color: #c1c1c1;
+}
+.slider__toggle:last-child {
+  margin-right: 0;
+}
+.slider__slides {
+  width: 880px;
+  height: 310px;
+  outline: 1px solid red;
+}
+.slider__slide {
+  display: none;
+  padding-top: 31px;
+  height: 310px;
+  background-position: right bottom;
+  background-repeat: no-repeat;
+}
+.slider__text {
+  width: 350px;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+}
+.slider__title {
+  margin-bottom: 18px;
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 500;
+}
+.slider__btn {}
+.btn {
+
+}
+#toggle-1:checked ~ .slider__slides .slider__slide--1 {
+  display: block;
+}
+#toggle-2:checked ~ .slider__slides .slider__slide--2 {
+  display: block;
+}
+#toggle-3:checked ~ .slider__slides .slider__slide--3 {
+  display: block;
+}
+.slider__slide--1 {
+  background-image: url(../img/bg_slide-1.png);
+  background-position: right bottom 69px;
+}
+.slider__slide--2 {
+  background-image: url(../img/bg_slide-2.png);
+  background-position: right bottom 47px;
+}
+.slider__slide--3 {
+  background-image: url(../img/bg_slide-3.png);
+}
+
+.main__container {
+  margin-bottom: 85px;
+}
+.features-row {
+  font-size: 0;
+}
+.features-item {
+  display: inline-block;
+  width: 240px;
+  min-height: 300px;
+  margin-right: 80px;
+  margin-bottom: 80px;
+  padding-top: 124px;
+  font-size: 15px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  vertical-align: top;
+}
+.features-item--bg-web {
+  background-image: url(../img/bg_advertising-image-1.png);
+}
+.features-item--bg-app {
+  background-image: url(../img/bg_advertising-image-2.png);
+}
+.features-item--bg-presentation {
+  background-image: url(../img/bg_advertising-image-3.png);
+}
+.features-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+
+
+hr {
+  display: block;
+  height: 2px;
+  margin: 0;
+  margin-bottom: 45px;
+  color: #eee;
+  border: none;
+  background-color: #eee;
+}
+.about-us {
+  margin-top: 70px;
+}
+.about-us__column-left {
+  float: left;
+  width: 620px;
+  margin-right: 20px;
+}
+
+
+
+.about-us__column-right {
+  float: right;
+  width: 240px;
+}
+
+
+.partners {
+  font-size: 0;
+}
+.partners__item {
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  width: 220px;
+  height: 100px;
+  margin-right: 110px;
+  vertical-align: top;
+}
+.partners__item:nth-child(3n) {
+  margin-right: 0;
+}
+.partners__item img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
+}
+.map {
+  position: relative;
+  height: 417px;
+  background-color: #e9e5dc;
+}
+.map__contact {
+  position: absolute;
+  top: 88px;
+  left: 0;
+  width: 250px;
+  height: 240px;
+  background-color: #fff;
+}
+
+
+
+.main-footer {
+  height: 215px;
+  padding-top: 75px;
+}
+.social {
+  float: left;
+  width: 240px;
+}
+
+
+
+
+.main-footer__titles {
+  float: right;
+  width: 580px;
+}
+
+
+
+/*  Каталог */
+
+.catalog__form {
+  float: left;
+  width: 240px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.catalog__content {
+  float: right;
+  width: 560px;
+  margin-bottom: 80px;
+  outline: 1px solid red;
+}
+
+.sorting__title {
+  float: left;
+  margin-right: 20px;
+}
+.sorting__items {
+  float: left;
+}
+.sorting__item {
+  display: inline-block;
+  vertical-align: top;
+}
+.sorting__swiches {
+  float: right;
+}
+
+
+
+.catalog__items {
+  font-size: 0;
+}
+.catalog__item {
+  display: inline-block;
+  width: 240px;
+  margin-right: 80px;
+  font-size: 16px;
+  vertical-align: top;
+}
+.catalog__item:nth-child(2n) {
+  margin-right: 0;
+}
+
+.pagination {
+  list-style: none;
+  font-size: 0;
+}
+.pagination__item {
+  display: inline-block;
+  font-size: 15px;
+  vertical-align: top;
+}
+
+
+
+
+
+
+
+
+/*  Попапы */
+.write-us {
+  display: none;
 }
