--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 
- @font-face {
+@font-face {
   font-family: "symbols-nerds";
   src: url("../font/symbols-nerds.eot?27841936");
   src: url("../font/symbols-nerds.eot?27841936#iefix") format("embedded-opentype"),
-       url("../font/symbols-nerds.woff?27841936") format("woff"),
-       url("../font/symbols-nerds.ttf?27841936") format("truetype"),
-       url("../font/symbols-nerds.svg?27841936#symbols-nerds") format("svg");
+  url("../font/symbols-nerds.woff?27841936") format("woff"),
+  url("../font/symbols-nerds.ttf?27841936") format("truetype"),
+  url("../font/symbols-nerds.svg?27841936#symbols-nerds") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -21,7 +21,7 @@
 }
 */
 
- [class^="icon-"]::before, [class*=" icon-"]::before {
+[class^="icon-"]::before, [class*=" icon-"]::before {
   font-family: "symbols-nerds";
   font-style: normal;
   font-weight: normal;
@@ -29,8 +29,8 @@
 
   display: inline-block;
   text-decoration: inherit;
-  width: 1em;
-  margin-right: .2em;
+  /*width: 1em;*/
+  /*margin-right: .2em;*/
   text-align: center;
   /* opacity: .8; */
 
@@ -43,7 +43,7 @@
 
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
-  margin-left: .2em;
+  /*margin-left: .2em;*/
 
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
@@ -85,6 +85,7 @@ body {
   font-family: "Roboto", "Arial", "sans-serif";
   font-size: 16px;
   font-style: normal;
+  font-weight: 500;
   line-height: 22px;
   color: #000;
   background-color: #fff;
@@ -105,6 +106,10 @@ h2 {
   line-height: 1.4;
   color: #000;
 }
+p {
+  margin: 0;
+  padding: 0;
+}
 .clearfix:after {
   content: "";
   display: table;
@@ -112,6 +117,7 @@ h2 {
 }
 .container {
   position: relative;
+  z-index: 5;
   width: 900px;
   min-height: 20px;
   margin: 0 auto;
@@ -129,8 +135,12 @@ h2 {
   position: relative;
   margin-bottom: 36px;
 }
-.main-header__logo {
+.main-logo {
   float: left;
+}
+.main-logo__img {
+  width: 139px;
+  height: 56px;
 }
 .main-nav {
   float: right;
@@ -140,23 +150,30 @@ h2 {
   list-style: none;
   font-size: 0;
 }
-.main-nav__list-item {
+.main-nav__item {
   display: inline-block;
+  vertical-align: top;
+  height: 30px;
   margin-right: 44px;
   font-size: 14px;
   line-height: 30px;
-  vertical-align: top;
   text-transform: uppercase;
   font-weight: 500;
 }
-.main-nav__list-item a {
+.main-nav__link {
   color: #000;
   text-decoration: none;
 }
-.main-nav__list-item:last-child {
+.main-nav__link:hover {
+  color: #fb565a;
+}
+.main-nav__link:active {
+  color: #8f8f8f;
+}
+.main-nav__item:last-child {
   margin-right: 0;
 }
-.main-header__cart {
+.main-cart {
   position: relative;
   float: right;
   width: 160px;
@@ -164,19 +181,42 @@ h2 {
   text-align: right;
   font-size: 14px;
   line-height: 30px;
-  vertical-align: top;
+  font-weight: 500;
   text-transform: uppercase;
 }
-.main-header__cart::before {
-  content: "\62";
-  position: absolute;
-  top: 50%;
-  left: 30px;
+.main-cart__wrap {
+  display: inline-block;
+  width: 96px;
 }
-.main-header__cart a {
+.main-cart__wrap--active {
+  border-bottom: 2px solid #fb565a;
+}
+.main-cart__link {
   color: #000;
   text-decoration: none;
 }
+.icon-basket::before {
+  position: absolute;
+  top: 50%;
+  right: 79px;
+  transform: translateY(-50%);
+  font-size: 16px;
+  color: #a6a6a6;
+}
+.main-cart__link:hover,
+.main-cart__link:hover.icon-basket::before {
+  color: #fb565a;
+}
+.main-cart__link:active {
+  color: #8f8f8f;
+}
+.main-cart__link:active.icon-basket::before {
+  color: #cbcbcb;
+}
+.main-nav__item--active {
+  border-bottom: 2px solid #fb565a;
+}
+
 .slider {
   position: relative;
   min-height: 310px;
@@ -189,8 +229,8 @@ h2 {
 }
 .slider__controls {
   position: absolute;
-  bottom: 94px;
-  left: 50%;
+  bottom: 83px;
+  left: 49%;
   font-size: 0;
   transform: translateX(-50%);
 }
@@ -215,7 +255,6 @@ h2 {
 .slider__slides {
   width: 880px;
   height: 310px;
-  outline: 1px solid red;
 }
 .slider__slide {
   display: none;
@@ -224,11 +263,17 @@ h2 {
   background-position: right bottom;
   background-repeat: no-repeat;
 }
-.slider__text {
-  width: 350px;
+.slider__content {
+  width: 360px;
   font-size: 16px;
   line-height: 22px;
   font-weight: 500;
+}
+.slider__content--2 {
+  width: 500px;
+}
+.slider__content--3 {
+  width: 510px;
 }
 .slider__title {
   margin-bottom: 18px;
@@ -236,9 +281,43 @@ h2 {
   line-height: 36px;
   font-weight: 500;
 }
-.slider__btn {}
+.slider__text {
+  margin-bottom: 27px;
+}
 .btn {
-
+  display: inline-block;
+  height: 38px;
+  padding-top: 10px;
+  padding-left: 41px;
+  padding-right: 39px;
+  border-radius: 3px;
+  font-size: 12px;
+  line-height: 18px;
+  text-transform: uppercase;
+  color: #fff;
+  text-decoration: none;
+  background-color: #fb565a;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: #d6494d;
+}
+.btn:active {
+  background-color: #b63538;
+  border-top: 3px solid #9b2d30;
+  padding-top: 7px;
+}
+.slider__btn {
+  padding-left: 70px;
+  padding-right: 70px;
+}
+.slider__btn:hover {
+  background-color: #d6494d;
+}
+.slider__btn:active {
+  background-color: #b63538;
+  border-top: 3px solid #9b2d30;
+  padding-top: 7px;
 }
 #toggle-1:checked ~ .slider__slides .slider__slide--1 {
   display: block;
@@ -267,63 +346,157 @@ h2 {
 .features-row {
   font-size: 0;
 }
-.features-item {
+.features__item {
   display: inline-block;
   width: 240px;
   min-height: 300px;
   margin-right: 80px;
-  margin-bottom: 80px;
-  padding-top: 124px;
+  margin-bottom: 79px;
+  padding-top: 147px;
   font-size: 15px;
   background-repeat: no-repeat;
   background-position: 0 0;
   vertical-align: top;
 }
-.features-item--bg-web {
+.features__item--bg-web {
   background-image: url(../img/bg_advertising-image-1.png);
 }
-.features-item--bg-app {
+.features__item--bg-app {
   background-image: url(../img/bg_advertising-image-2.png);
 }
-.features-item--bg-presentation {
+.features__item--bg-presentation {
   background-image: url(../img/bg_advertising-image-3.png);
 }
-.features-item:nth-child(3n) {
+.features__item:nth-child(3n) {
   margin-right: 0;
 }
+.features__title {
+  margin-bottom: 14px;
+  font-size: 18px;
+  line-height: 30px;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.features__text {
+  margin-bottom: 26px;
+  font-size: 15px;
+  line-height: 22px;
+  font-weight: 500;
+}
+.features__text--app {
+  width: 220px;
+}
+.features__btn--web:hover {
+  background-color: #d6494d;
+}
+.features__btn--web:active {
+  background-color: #b63538;
+  border-top: 3px solid #9b2d30;
+  padding-top: 7px;
+}
+.features__btn--app {
+  background-color: #00ca74;
+}
+.features__btn--app:hover {
+  background-color: #01a25e;
+}
+.features__btn--app:active {
+  background-color: #009053;
+  border-top: 3px solid #007b47;
+  padding-top: 7px;
+}
+.features__btn--presentation {
+  background-color: #efc84a;
+}
+.features__btn--presentation:hover {
+  background-color: #d6ae2c;
+}
+.features__btn--presentation:active {
+  background-color: #c09b24;
+  border-top: 3px solid #a3841f;
+  padding-top: 7px;
+}
 
-
-
-hr {
+.horizontal-line {
   display: block;
   height: 2px;
   margin: 0;
-  margin-bottom: 45px;
+  margin-bottom: 35px;
   color: #eee;
   border: none;
   background-color: #eee;
 }
 .about-us {
   margin-top: 70px;
+  margin-bottom: 48px;
 }
 .about-us__column-left {
   float: left;
   width: 620px;
   margin-right: 20px;
 }
-
-
+.about-us__title {
+  margin-bottom: 18px;
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 500;
+}
+.about-us__text {
+  margin-bottom: 44px;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+}
+.about-us__title-small {
+  margin-bottom: 22px;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.about-us__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.about-us__item {
+  position: relative;
+  margin-bottom: 22px;
+  padding-left: 37px;
+}
+.about-us__item::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  display: block;
+  width: 25px;
+  height: 2px;
+  background-color: #fb565a;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
 
 .about-us__column-right {
+  position: relative;
   float: right;
   width: 240px;
+}
+.about-us__img-link {
+  position: relative;
+  top: -11px;
+  display: block;
+  margin-bottom: 52px;
 }
 
 
 .partners {
   font-size: 0;
+  margin-bottom: 30px;
 }
-.partners__item {
+.partners__link {
   position: relative;
   display: inline-block;
   overflow: hidden;
@@ -331,11 +504,21 @@ hr {
   height: 100px;
   margin-right: 110px;
   vertical-align: top;
+  opacity: 0.2;
+  -webkit-transition: opacity 0.35s ease-in-out;
+  -o-transition: opacity 0.35s ease-in-out;
+  transition: opacity 0.35s ease-in-out;
 }
-.partners__item:nth-child(3n) {
+.partners__link:hover {
+  opacity: 1;
+}
+.partners__link:active {
+  opacity: 1;
+}
+.partners__link:nth-child(3n) {
   margin-right: 0;
 }
-.partners__item img {
+.partners__img {
   position: absolute;
   top: 0;
   right: 0;
@@ -348,16 +531,46 @@ hr {
 }
 .map {
   position: relative;
+  display: block;
   height: 417px;
   background-color: #e9e5dc;
+}
+.map__frame {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 .map__contact {
   position: absolute;
   top: 88px;
-  left: 0;
+  left: 10px;
   width: 250px;
   height: 240px;
+  padding-left: 20px;
+  padding-top: 26px;
   background-color: #fff;
+}
+.map__title {
+  margin-bottom: 12px;
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 500;
+}
+.map__text {
+  width: 205px;
+  margin-bottom: 20px;
+  padding-left: 2px;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 500;
+  color: #666;
+}
+.map__btn {
+  position: absolute;
+  bottom: 25px;
+  left: 22px;
+  padding-left: 54px;
+  padding-right: 54px;
 }
 
 
@@ -369,50 +582,251 @@ hr {
 .social {
   float: left;
   width: 240px;
+  height: 62px;
+  font-size: 0;
+}
+.social__btn {
+  position: relative;
+  display: inline-block;
+  width: 62px;
+  height: 62px;
+  margin-right: 27px;
+  border-radius: 50%;
+  font-size: 23px;
+  color: #fff;
+  background-color: #e1e1e1;
+}
+.social__btn:hover {
+  background-color: #fb565a;
+}
+.social__btn:active {
+  background-color: #d6494d;
+}
+.social__btn:last-child {
+  margin-right: 0;
+}
+.icon-vk::before,
+.icon-facebook::before,
+.icon-instagramm::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  -o-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
 }
 
 
-
-
-.main-footer__titles {
+.main-footer__content {
   float: right;
   width: 580px;
+}
+.main-footer__title {
+  margin-left: 20px;
+  margin-bottom: 8px;
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 500;
+}
+.main-footer__text {
+  margin-left: 20px;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+  color: #283136;
 }
 
 
 
 /*  Каталог */
-
+.main-header__title {
+  width: 700px;
+  margin: 0 auto;
+  padding-top: 22px;
+  text-align: center;
+  font-size: 40px;
+  line-height: 48px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
 .catalog__form {
   float: left;
   width: 240px;
 }
+.form {
 
+}
+.form__title {
+  margin-bottom: 20px;
+  font-size: 18px;
+  line-height: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.range-filter {
+  margin-bottom: 51px;
+}
+.range-filter__controls {
+  position: relative;
+  width: 240px;
+  height: 80px;
+  margin-bottom: 14px;
+  padding: 0 22px;
+  overflow: hidden;
+  border-radius: 5px;
+  background-color: #f1f1f1;
+}
+.range-filter__scale {
+  height: 2px;
+  margin-top: 39px;
+  background-color: #d7dcde;
+}
+.range-filter__bar {
+  height: 2px;
+  width: 150px;
+  background-color: #00ca74;
+}
+.range-filter__toggle {
+  position: absolute;
+  top: 29px;
+  left: 20px;
+  width: 20px;
+  height: 20px;
+  -webkit-box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.14);
+  -moz-box-shadow:    0 2px 1px 0 rgba(0, 1, 1, 0.14);
+  box-shadow:         0 2px 1px 0 rgba(0, 1, 1, 0.14);
+  border: 8px solid #fff;
+  border-radius: 50%;
+  background-color: #ababab;
+}
+.range-filter__toggle--min {
+  left: 20px;
+}
+.range-filter__toggle--max {
+  left: 160px;
+}
+.range-filter__price-controls {
+  min-height: 38px;
+}
+.range-filter__price-control {
+  height: 38px;
+  width: 80px;
+  margin-left: 5px;
+  border: none;
+  border-radius: 3px;
+  font-size: 16px;
+  line-height: 22px;
+  background-color: #f1f1f1;
+  text-align: center;
+}
+.range-filter__price-control::-webkit-input-placeholder {  color:#000;  }
+.range-filter__price-control::-ms-input-placeholder     {  color:#000;  }
+.range-filter__price-control:-ms-input-placeholder      {  color:#000;  }
+.range-filter__price-control:-moz-placeholder           {  color:#000;  }
+.range-filter__price-control::placeholder               {  color:#000;  }
+label[for="price-control--min"],
+label[for="price-control--max"] {
+  text-transform: uppercase;
+}
+label[for="price-control--min"] {
+  float: left;
+}
+label[for="price-control--max"] {
+  float: right;
+}
+.form__list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 51px;
+}
+.form__item {
+  position: relative;
+  margin-bottom: 18px;
+  padding-left: 35px;
+}
+.form__item-input{
+  display: none;
+}
+.form__item-label {
+  cursor: pointer;
+  color: #283136;
+}
+.form__item-input + .form__item-label::before {
+  content: "";
+  font-family: "symbols-nerds";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 20px;
+  height: 20px;
+  font-size: 28px;
+  color: #c1c1c1;
+}
+.form__item-input--circle + .form__item-label::before {
+  content: "\25cb";
+}
+.form__item-input--circle:checked + .form__item-label::before {
+  content: "\25cf";
+}
+.form__item-input--square + .form__item-label::before {
+  content: "\2610";
+}
+.form__item-input--square:checked + .form__item-label::before {
+  content: "\2611";
+}
+.form__item-label:hover {
+  color: #000;
+}
+.form__item-label:hover::before {
+  color: #b5b5b5;
+}
+.form__item-input:disabled + .form__item-label {
+  color: #a9adaf;
+  cursor: default;
+}
+.form__item-input:disabled + .form__item-label::before {
+  color: #e9e9e9;
+  cursor: default;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.form__btn {
+  margin-top: 7px;
+  width: 153px;
+  height: 38px;
+  border: none;
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 700;
+  border-radius: 2px;
+  text-transform: uppercase;
+  background-color: #f1f1f1;
+  outline: none;
+}
+.form__btn:hover {
+  background-color: #e5e5e5;
+}
+.form__btn:active {
+  padding-bottom: 3px;
+  background-color: #d5d5d5;
+  border-top: 2px solid #b5b5b5;
+}
 .catalog__content {
   float: right;
   width: 560px;
   margin-bottom: 80px;
-  outline: 1px solid red;
 }
-
+.sorting {
+  margin-bottom: 18px;
+  font-size: 12px;
+  line-height: 16px;
+  text-transform: uppercase;
+}
 .sorting__title {
   float: left;
-  margin-right: 20px;
+  margin-right: 38px;
 }
 .sorting__items {
   float: left;
@@ -420,9 +834,70 @@ hr {
 .sorting__item {
   display: inline-block;
   vertical-align: top;
+  height: 17px;
+  margin-right: 42px;
+  text-decoration: none;
+  color: #b2b2b2;
+  border-bottom: 1px dotted #00ca74;
+}
+.sorting__item--active {
+  color: #000;
+  border: none;
+  cursor: default;
+}
+.sorting__item:not([class*="active"]):hover {
+  border-bottom: 1px solid #00ca74;
+  color: #000;
+}
+.sorting__item:not([class*="active"]):active {
+  border-bottom: none;
+  color: #000;
 }
 .sorting__swiches {
+  position: relative;
   float: right;
+  width: 28px;
+  height: 20px;
+}
+.sorting__swich {
+  position: absolute;
+  top: 0;
+  width: 10px;
+  height: 20px;
+  cursor: default;
+}
+.sorting__swich--up {
+  right: 0;
+}
+.sorting__swich--down {
+  right: 17px;
+}
+.sorting__swich::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 50%;
+  font-family: "symbols-nerds";
+  font-size: 23px;
+  color: #c1c1c1;
+  transform: translateX(50%);
+  cursor: pointer;
+}
+.sorting__swich--active::before {
+  color: #00ca74;
+  cursor: default;
+}
+.sorting__swich--up::before {
+  content: "\25b2";
+}
+.sorting__swich--down::before {
+  content: "\25bc";
+}
+.sorting__swich:not([class*="active"]):hover::before {
+  color: #b5b5b5;
+}
+.sorting__swich:not([class*="active"]):active::before {
+  color: #000;
 }
 
 
@@ -430,28 +905,132 @@ hr {
 .catalog__items {
   font-size: 0;
 }
-.catalog__item {
+.item {
+  position: relative;
   display: inline-block;
+  vertical-align: top;
   width: 240px;
   margin-right: 80px;
+  margin-bottom: 74px;
   font-size: 16px;
-  vertical-align: top;
 }
-.catalog__item:nth-child(2n) {
+.item:nth-child(2n) {
   margin-right: 0;
 }
+.item__actions {
+  position: absolute;
+  z-index: 10;
+  display: none;
+  top: 50px;
+  left: 20px;
+  width: 200px;
+  height: 200px;
+  padding-top: 33px;
+  background-color: #fff;
+  text-align: center;
+}
+.item__title {
+  margin-bottom: 12px;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+.item__btn {
+  position: absolute;
+  bottom: 30px;
+  left: 30px;
+  width: 140px;
+  padding-left: 5px;
+  padding-right: 0px;
+  font-size: 18px;
+}
+.item__text {
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 14px;
+  line-height: 18px;
+}
+.item__decoration {
+  position: relative;
+  height: 30px;
+  border-radius: 4px 4px 0 0;
+  background-color: #f1f1f1;
+}
+.item__decoration-item,
+.item__decoration-item::before,
+.item__decoration-item::after {
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: 29px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #fff;
+}
+.item__decoration-item::before {
+  top: 0;
+  left: -17px;
+}
+.item__decoration-item::after {
+  top: 0;
+  left: 17px;
+}
+.item__link {
+  cursor: default;
+}
+.item:hover .item__decoration {
+  background-color: #ccc;
+}
+.item:hover .item__actions {
+  display: block;
+}
+
+
 
 .pagination {
+  padding: 0;
   list-style: none;
   font-size: 0;
 }
 .pagination__item {
   display: inline-block;
-  font-size: 15px;
   vertical-align: top;
+  min-width: 38px;
+  height: 38px;
+  margin-right: 10px;
+  padding-top: 6px;
+  background-color: #f2f2f2;
+  border: 2px solid #f2f2f2;
+  border-radius: 3px;
+  text-align: center;
+  font-size: 12px;
 }
-
-
+.pagination__item:not([class*="active"]) {
+  cursor: pointer;
+}
+.pagination__item--active {
+  background-color: #fff;
+}
+.pagination__link {
+  text-decoration: none;
+  color: #000;
+  cursor: default;
+}
+.pagination__text {
+  text-transform: uppercase;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.pagination__item:not([class*="active"]):hover {
+  background-color: #e5e5e5;
+  border-color: #e5e5e5;
+}
+.pagination__item:not([class*="active"]):active {
+  padding-top: 5px;
+  background-color: #d5d5d5;
+  border: 2px solid #d5d5d5;
+  border-top: 3px solid #b5b5b5;
+}
 
 
 
